tests/ui/parser/issues/error-pattern-issue-50571.stderr
error: expected `;` or `]`, found `,`
  --> $DIR/error-pattern-issue-50571.rs:5:14
   |
LL |     fn foo([a, b]: [i32; 2]) {}
   |              ^ expected `;` or `]`
   |
help: you might have meant to use `;` as the separator
   |
LL -     fn foo([a, b]: [i32; 2]) {}
LL +     fn foo([a; b]: [i32; 2]) {}
   |

error[E0642]: parameters can't have complex patterns in associated functions in traits in Rust 2015
  --> $DIR/error-pattern-issue-50571.rs:5:12
   |
LL |     fn foo([a, b]: [i32; 2]) {}
   |            ^^^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL -     fn foo([a, b]: [i32; 2]) {}
LL +     fn foo(_: [i32; 2]) {}
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0642`.
